# simcom

./: .editorconfig  .gitignore  CMakeLists.txt  README.es.md  README.md  conanfile.py
.github/workflows/: build.yml  build_and_release.yml
modules-cmake/: clang-tools.cmake  clang.cmake  conan-tools.cmake  conan.cmake  default-parameters.cmake  gtest-tools.cmake  pre-commit.cmake  project-version.cmake  settings-tools.cmake  settings.cmake  unit-test.cmake  version-tools.cmake
scripts/: build_simcom.bat
src/client/: CMakeLists.txt  client_application.cpp  client_application.h
src/it/: CMakeLists.txt
src/lib/: CMakeLists.txt  address.cpp  client.cpp  client_impl.cpp  client_impl.h  server.cpp  server_connection.cpp  server_connection.h  server_impl.cpp  server_impl.h  version.cpp.in
src/lib/include/: address.h  client.h  helpers.h  server.h  version.h
src/server/: CMakeLists.txt  server_application.cpp  server_application.h
src/ut/: CMakeLists.txt  u_test_1.cpp
